Localize website to Sri Lankan tourism - update filters, images, content, and Popular Tours section

--- a/destinations.html
+++ b/destinations.html
@@ -91,22 +91,22 @@
                 
                 <div class="filter-controls">
                     <button class="filter-btn active" data-filter="all">
-                        <i class="fas fa-globe"></i> All Destinations
+                        <i class="fas fa-globe"></i> All Tours
                     </button>
-                    <button class="filter-btn" data-filter="asia">
-                        <i class="fas fa-map"></i> Asia
+                    <button class="filter-btn" data-filter="cultural">
+                        <i class="fas fa-gopuram"></i> Cultural Heritage
                     </button>
-                    <button class="filter-btn" data-filter="europe">
-                        <i class="fas fa-landmark"></i> Europe
+                    <button class="filter-btn" data-filter="beach">
+                        <i class="fas fa-umbrella-beach"></i> Beach & Coastal
                     </button>
-                    <button class="filter-btn" data-filter="america">
-                        <i class="fas fa-flag-usa"></i> America
+                    <button class="filter-btn" data-filter="wildlife">
+                        <i class="fas fa-paw"></i> Wildlife & Safari
                     </button>
-                    <button class="filter-btn" data-filter="africa">
-                        <i class="fas fa-mountain"></i> Africa
+                    <button class="filter-btn" data-filter="hillcountry">
+                        <i class="fas fa-mountain"></i> Hill Country
                     </button>
-                    <button class="filter-btn" data-filter="oceania">
-                        <i class="fas fa-water"></i> Oceania
+                    <button class="filter-btn" data-filter="adventure">
+                        <i class="fas fa-hiking"></i> Adventure
                     </button>
                 </div>
 
@@ -128,9 +128,9 @@
             <!-- Destinations Grid -->
             <div class="destinations-grid" id="destinationsGrid">
                 <!-- Destination Card - Sri Lanka Explorer Tour -->
-                <a href="destination-detail.html?id=sri-lanka-explorer" class="destination-card" data-category="asia" data-name="Sri Lanka Explorer Tour" data-tours="1">
+                <a href="destination-detail.html?id=sri-lanka-explorer" class="destination-card" data-category="cultural" data-name="Sri Lanka Explorer Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=600&h=400&fit=crop" alt="Sri Lanka">
+                        <img src="images/sigiriya.png" alt="Sri Lanka">
                         <div class="destination-overlay"></div>
                         <span class="featured-badge">⭐ Featured</span>
                     </div>
@@ -142,9 +142,9 @@
                 </a>
 
                 <!-- Destination Card - Classic Sri Lanka Tour -->
-                <a href="destination-detail.html?id=classic-sri-lanka" class="destination-card" data-category="asia" data-name="Classic Sri Lanka Tour" data-tours="1">
+                <a href="destination-detail.html?id=classic-sri-lanka" class="destination-card" data-category="cultural" data-name="Classic Sri Lanka Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1552375846-8b2e118bd6e7?w=600&h=400&fit=crop" alt="Sri Lanka">
+                        <img src="images/polonnaru.png" alt="Sri Lanka">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
@@ -155,9 +155,9 @@
                 </a>
 
                 <!-- Destination Card - Sri Lanka Cultural & Beach Tour -->
-                <a href="destination-detail.html?id=cultural-beach-sri-lanka" class="destination-card" data-category="asia" data-name="Sri Lanka Cultural & Beach Tour" data-tours="1">
+                <a href="destination-detail.html?id=cultural-beach-sri-lanka" class="destination-card" data-category="beach" data-name="Sri Lanka Cultural & Beach Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1589308078059-be1415eab4c3?w=600&h=400&fit=crop" alt="Sri Lanka">
+                        <img src="images/kandy1.png" alt="Sri Lanka">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
@@ -168,9 +168,9 @@
                 </a>
 
                 <!-- Destination Card - Grand Sri Lanka Tour -->
-                <a href="destination-detail.html?id=grand-sri-lanka" class="destination-card" data-category="asia" data-name="Grand Sri Lanka Tour" data-tours="1">
+                <a href="destination-detail.html?id=grand-sri-lanka" class="destination-card" data-category="cultural" data-name="Grand Sri Lanka Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=600&h=400&fit=crop" alt="Grand Sri Lanka Tour">
+                        <img src="images/galle.png" alt="Grand Sri Lanka Tour">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
@@ -181,9 +181,9 @@
                 </a>
 
                 <!-- Destination Card - Honeymoon Tour Package -->
-                <a href="destination-detail.html?id=honeymoon-sri-lanka" class="destination-card" data-category="asia" data-name="Honeymoon Tour Package" data-tours="1">
+                <a href="destination-detail.html?id=honeymoon-sri-lanka" class="destination-card" data-category="beach" data-name="Honeymoon Tour Package" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1519904981063-b0cf448d479e?w=600&h=400&fit=crop" alt="Honeymoon Sri Lanka">
+                        <img src="images/HM.png" alt="Honeymoon Sri Lanka">
                         <div class="destination-overlay"></div>
                         <span class="featured-badge">💕 Romantic</span>
                     </div>
@@ -195,9 +195,9 @@
                 </a>
 
                 <!-- Destination Card - Ultimate Sri Lanka Grand Tour -->
-                <a href="destination-detail.html?id=ultimate-sri-lanka" class="destination-card" data-category="asia" data-name="Ultimate Sri Lanka Grand Tour" data-tours="1">
+                <a href="destination-detail.html?id=ultimate-sri-lanka" class="destination-card" data-category="cultural" data-name="Ultimate Sri Lanka Grand Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1570077188670-e3a8d69ac5ff?w=600&h=400&fit=crop" alt="Ultimate Sri Lanka">
+                        <img src="images/wes.png" alt="Ultimate Sri Lanka Grand Tour">
                         <div class="destination-overlay"></div>
                         <span class="featured-badge">⭐ Best Value</span>
                     </div>
@@ -209,9 +209,9 @@
                 </a>
 
                 <!-- Destination Card - Beach Vacation Tour -->
-                <a href="destination-detail.html?id=beach-vacation-sri-lanka" class="destination-card" data-category="asia" data-name="Beach Vacation Tour" data-tours="1">
+                <a href="destination-detail.html?id=beach-vacation-sri-lanka" class="destination-card" data-category="beach" data-name="Beach Vacation Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600&h=400&fit=crop" alt="Sri Lanka Beaches">
+                        <img src="images/B1.png" alt="Ultimate Sri Lanka Grand Tour">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
@@ -222,9 +222,9 @@
                 </a>
 
                 <!-- Destination Card - Hill Country Escape -->
-                <a href="destination-detail.html?id=hill-country-escape" class="destination-card" data-category="asia" data-name="Hill Country Escape" data-tours="1">
+                <a href="destination-detail.html?id=hill-country-escape" class="destination-card" data-category="hillcountry" data-name="Hill Country Escape" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1577717903315-1691ae25ab3f?w=600&h=400&fit=crop" alt="Sri Lanka Hill Country">
+                        <img src="images/E1.png" alt="Ultimate Sri Lanka Grand Tour">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
@@ -235,9 +235,9 @@
                 </a>
 
                 <!-- Destination Card - Sri Lanka Highlights Tour -->
-                <a href="destination-detail.html?id=highlights-tour-sri-lanka" class="destination-card" data-category="asia" data-name="Sri Lanka Highlights Tour" data-tours="1">
+                <a href="destination-detail.html?id=highlights-tour-sri-lanka" class="destination-card" data-category="cultural" data-name="Sri Lanka Highlights Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1588442686675-d8c3d14f27e6?w=600&h=400&fit=crop" alt="Sri Lanka Highlights">
+                        <img src="images/w1.png" alt="Ultimate Sri Lanka Grand Tour">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
