--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             
             <nav class="nav-menu">
-                <a href="index.html" class="nav-link">HOME</a>
+                <a href="index.html" class="nav-link active">HOME</a>
                 <a href="destinations.html" class="nav-link">DESTINATIONS</a>
                 <a href="gallery.html" class="nav-link">GALLERY</a>
                 <a href="about.html" class="nav-link">ABOUT US</a>
