--- a/about.html
+++ b/about.html
@@ -75,12 +75,15 @@
         <div class="about-container">
             <div class="about-content">
                 <p class="about-subtitle">Your Trusted Travel Partner</p>
-                <h2 class="about-title">Creating Unforgettable Journeys Since 2018</h2>
+                <h2 class="about-title">Creating Unforgettable Journeys Since 2022</h2>
                 <p class="about-text">
-                    At Serandib Travels, we believe that travel is more than just visiting new places—it's about creating memories that last a lifetime. With over 8 years of expertise in crafting personalized travel experiences, we've helped thousands of travelers discover the world's most breathtaking destinations.
+                    Ceylonova Tours is a trusted Sri Lankan tour operator dedicated to creating authentic and memorable travel experiences across the island. With strong local knowledge and hands-on experience in the tourism industry, we have successfully organized tours for both international and local travelers, covering Sri Lanka's most iconic destinations.
                 </p>
                 <p class="about-text">
-                    Our team of experienced travel consultants works tirelessly to design customized itineraries that match your dreams and budget. From exotic beach getaways to thrilling mountain adventures, cultural city tours to serene countryside escapes, we ensure every journey is seamless, safe, and truly spectacular.
+                    From ancient cities and cultural landmarks to golden beaches, misty hill country, wildlife safaris, and romantic honeymoon escapes, our tours are carefully designed to showcase the true beauty of Sri Lanka. Our team of experienced, English-speaking drivers and guides, comfortable vehicles, and flexible tour planning ensure a safe, smooth, and enjoyable journey.
+                </p>
+                <p class="about-text">
+                    At Ceylonova Tours, we believe every traveler is unique which is why we specialize in custom-made tour itineraries tailored to your interests, schedule, and travel style. We are committed to providing reliable service, transparent pricing, and genuine hospitality, making every trip not just a holiday, but a meaningful experience. Discover Sri Lanka the right way with Ceylonova Tours.
                 </p>
                 
                 <div class="about-features">
@@ -100,21 +103,18 @@
 
                 <div class="about-stats">
                     <div class="about-stat">
-                        <h3 class="stat-number">11</h3>
+                        <h3 class="stat-number">04</h3>
                         <p class="stat-label">Years Experiences</p>
                     </div>
                     <div class="about-stat">
-                        <h3 class="stat-number">291</h3>
+                        <h3 class="stat-number">50+</h3>
                         <p class="stat-label">Tour Packages</p>
                     </div>
                     <div class="about-stat">
-                        <h3 class="stat-number">467</h3>
+                        <h3 class="stat-number">300+</h3>
                         <p class="stat-label">Happy Customers</p>
                     </div>
-                    <div class="about-stat">
-                        <h3 class="stat-number">176</h3>
-                        <p class="stat-label">Award Winning</p>
-                    </div>
+                    
                 </div>
             </div>
 
