--- a/destination-detail.html
+++ b/destination-detail.html
@@ -236,19 +236,19 @@
                 <div class="related-tours-card">
                     <h3>Popular Tours</h3>
                     <div class="related-tour-item">
-                        <img src="https://images.unsplash.com/photo-1493976040374-85c8e12f0c0e?w=100&h=100&fit=crop" alt="Tour">
+                        <img src="images/sigiriya.png" alt="Sri Lanka Explorer Tour">
                         <div class="related-tour-info">
-                            <h5>Tokyo City Tour</h5>
-                            <p><i class="fas fa-clock"></i> 5 Days</p>
-                            <span class="related-tour-price">$899</span>
+                            <h5>Sri Lanka Explorer Tour</h5>
+                            <p><i class="fas fa-clock"></i> 4 Days / 3 Nights</p>
+                            <span class="related-tour-price">$400</span>
                         </div>
                     </div>
                     <div class="related-tour-item">
-                        <img src="https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=100&h=100&fit=crop" alt="Tour">
+                        <img src="images/ClassicSriLanka.png" alt="Classic Sri Lanka Tour">
                         <div class="related-tour-info">
-                            <h5>Bangkok Adventure</h5>
-                            <p><i class="fas fa-clock"></i> 6 Days</p>
-                            <span class="related-tour-price">$799</span>
+                            <h5>Classic Sri Lanka Tour</h5>
+                            <p><i class="fas fa-clock"></i> 6 Days / 5 Nights</p>
+                            <span class="related-tour-price">$700</span>
                         </div>
                     </div>
                 </div>
