Updated home images to webp format

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Hero Section / Slider -->
     <section class="hero-section">
         <div class="hero-slider">
-            <div class="hero-slide active" style="background-image: url('images/home1.jpg');">
+            <div class="hero-slide active" style="background-image: url('images/home1.webp');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="hero-slide" style="background-image: url('images/home2.jpg');">
+            <div class="hero-slide" style="background-image: url('images/home2.webp');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="hero-slide" style="background-image: url('images/home3.jpg');">
+            <div class="hero-slide" style="background-image: url('images/home3.webp');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
