Add comprehensive mobile responsiveness - hamburger menu, touch targets, better spacing

--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,9 @@
                 <button class="search-btn"><i class="fas fa-search"></i></button>
                 <a href="#" class="login-btn"><i class="fas fa-user"></i> LOGIN/REGISTER</a>
                 <a href="#" class="book-now-btn">BOOK NOW</a>
+                <button class="menu-toggle" id="menuToggle">
+                    <i class="fas fa-bars"></i>
+                </button>
             </div>
         </div>
     </header>
