Make Top Categories section buttons clickable - link to destinations page

--- a/index.html
+++ b/index.html
@@ -386,34 +386,34 @@
                     <h3>Top<br>Categories</h3>
                 </div>
                 <div class="categories-slider">
-                    <div class="category-item">
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-umbrella-beach"></i>
                         <p>Beach Tours</p>
-                    </div>
-                    <div class="category-item">
+                    </a>
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-person-swimming"></i>
                         <p>Surfing</p>
-                    </div>
-                    <div class="category-item">
+                    </a>
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-binoculars"></i>
                         <p>Safari</p>
-                    </div>
-                    <div class="category-item">
+                    </a>
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-bicycle"></i>
                         <p>Cycling</p>
-                    </div>
-                    <div class="category-item">
+                    </a>
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-person-hiking"></i>
                         <p>Trekings</p>
-                    </div>
-                    <div class="category-item">
+                    </a>
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-campground"></i>
                         <p>Camping</p>
-                    </div>
-                    <div class="category-item">
+                    </a>
+                    <a href="destinations.html" class="category-item">
                         <i class="fas fa-mountain"></i>
                         <p>Hiking</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
