Add smooth alternating Sinhala/English welcome text

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="hero-slide active" style="background-image: url('images/home1.webp');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
+                    <p class="hero-welcome-sinhala">ආයුබෝවන්!</p>
                     <p class="hero-subtitle">Amazing Places</p>
                     <h1 class="hero-title">Make Your Trip Fun & Noted</h1>
                     <p class="hero-description">
@@ -79,7 +79,7 @@
             <div class="hero-slide" style="background-image: url('images/home2.webp');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
+                    <p class="hero-welcome-sinhala">ආයුබෝවන්!</p>
                     <p class="hero-subtitle">Explore Destinations</p>
                     <h1 class="hero-title">Adventure Awaits You</h1>
                     <p class="hero-description">
@@ -92,7 +92,7 @@
             <div class="hero-slide" style="background-image: url('images/home3.webp');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
+                    <p class="hero-welcome-sinhala">ආයුබෝවන්!</p>
                     <p class="hero-subtitle">Plan Your Journey</p>
                     <h1 class="hero-title">Unforgettable Memories</h1>
                     <p class="hero-description">
