--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <!-- Updated: 2026-01-31 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>TRAVELIN - Travel Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=20260131">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -871,7 +874,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="package-modal.js"></script>
+    <script src="script.js?v=20260131"></script>
+    <script src="package-modal.js?v=20260131"></script>
 </body>
 </html>
